// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  flexDirection="row"
  flexWrap="wrap"
  justifyContent="center"
  marginBottom="10px"
  style={null}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    marginRight="10px"
    marginTop="10px"
    maxWidth="80%"
  >
    <a
      className="link__RespLink-sc-1ocvixa-0 dfMuic"
    >
      <div
        borderColor="#DBDBDB"
        borderRadius={2}
        borderWidth={1}
        className="tc-view__TcView-nuazoi-0 fPjBcr"
        paddingBottom="10px"
        paddingLeft="15px"
        paddingRight="15px"
        paddingTop="10px"
      >
        <div
          className="tc-text__TcText-sc-15igzev-0 kwFxdN"
          color="#696969"
          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
          fontSize={12}
          fontSizeStyle={
            Object {
              "fontSize": 13,
            }
          }
          lineHeight="13px"
          position="relative"
          top={1}
        >
          Football
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`2. group of topics at large scale 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  flexDirection="row"
  flexWrap="wrap"
  justifyContent="center"
  marginBottom="10px"
  style={null}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    marginRight="10px"
    marginTop="10px"
    maxWidth="80%"
  >
    <a
      className="link__RespLink-sc-1ocvixa-0 dfMuic"
    >
      <div
        borderColor="#DBDBDB"
        borderRadius={2}
        borderWidth={1}
        className="tc-view__TcView-nuazoi-0 fPjBcr"
        paddingBottom="10px"
        paddingLeft="15px"
        paddingRight="15px"
        paddingTop="10px"
      >
        <div
          className="tc-text__TcText-sc-15igzev-0 kwFxdN"
          color="#696969"
          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
          fontSize={12}
          fontSizeStyle={
            Object {
              "fontSize": 13,
            }
          }
          lineHeight="13px"
          position="relative"
          top={1}
        >
          Football
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`3. group of topics at xlarge scale 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  flexDirection="row"
  flexWrap="wrap"
  justifyContent="center"
  marginBottom="10px"
  style={null}
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
    marginRight="10px"
    marginTop="10px"
    maxWidth="80%"
  >
    <a
      className="link__RespLink-sc-1ocvixa-0 dfMuic"
    >
      <div
        borderColor="#DBDBDB"
        borderRadius={2}
        borderWidth={1}
        className="tc-view__TcView-nuazoi-0 fPjBcr"
        paddingBottom="10px"
        paddingLeft="15px"
        paddingRight="15px"
        paddingTop="10px"
      >
        <div
          className="tc-text__TcText-sc-15igzev-0 kwFxdN"
          color="#696969"
          fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
          fontSize={12}
          fontSizeStyle={
            Object {
              "fontSize": 13,
            }
          }
          lineHeight="13px"
          position="relative"
          top={1}
        >
          Football
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`4. article topic with style 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  marginRight="10px"
  marginTop="10px"
  maxWidth="80%"
>
  <a
    className="link__RespLink-sc-1ocvixa-0 dfMuic"
  >
    <div
      borderColor="#DBDBDB"
      borderRadius={2}
      borderWidth={1}
      className="tc-view__TcView-nuazoi-0 fPjBcr"
      paddingBottom="10px"
      paddingLeft="15px"
      paddingRight="15px"
      paddingTop="10px"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 kwFxdN"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        fontSizeStyle={
          Object {
            "fontSize": 17,
          }
        }
        lineHeight="20px"
        position="relative"
        top={1}
      >
        Test
      </div>
    </div>
  </a>
</div>
`;

exports[`5. article topic with no additional style 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
  marginRight="10px"
  marginTop="10px"
  maxWidth="80%"
>
  <a
    className="link__RespLink-sc-1ocvixa-0 dfMuic"
  >
    <div
      borderColor="#DBDBDB"
      borderRadius={2}
      borderWidth={1}
      className="tc-view__TcView-nuazoi-0 fPjBcr"
      paddingBottom="10px"
      paddingLeft="15px"
      paddingRight="15px"
      paddingTop="10px"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 kwFxdN"
        color="#696969"
        fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
        fontSize={12}
        fontSizeStyle={null}
        lineHeight={12}
        position="relative"
        top={1}
      >
        Test
      </div>
    </div>
  </a>
</div>
`;
